# clinical-decision-engine

./: .cuur-codegen.json  .dockerignore  .eslintrc.json  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dashboard  Dockerfile.service  Makefile  PRISMA-MIGRATION-COMPLETE.md  README.md  cde.openapi.yaml  cloudbuild.yaml  docker-compose.yml  fix-all-openapi-responses.py  fix-get-handlers.py  fix-handler-returns.py  fix-handlers.sh  fix-openapi-responses.py  openapi-knowledge-evidence.yaml  openapi-workflow-care-pathways.yaml  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simple-wrap.sh  tsconfig.json  update-openapi-all-responses.py  update-openapi.sh  wrap-all-responses.py  wrap-remaining-arrays.sh  wrap-responses.mjs
.codegen/.coregen/: .cuur-coregen.example.json  .cuur-coregen.json  .envrc  .gitignore  MANIFEST.in  README.md  VERB_MAPPING.md  pyproject.toml  requirements.txt
.codegen/.coregen/.ai/: AI_AGENT_USAGE.txt
.codegen/.coregen/docs/: .cursorrules  AI_OPERATION_GUIDE.md  ARCHITECTURE.md  INSTALL.md  LAYERS_CONFIG.md  MIGRATION.md
.codegen/.coregen/scripts/: generate-sdk.py
.codegen/.coregen/src/cuur_codegen/: __init__.py
.codegen/.coregen/src/cuur_codegen/base/: __init__.py  builder.py  config.py  context.py  context_factory.py  errors.py  generator.py  generator_bases.py  generator_registry.py  logger.py
.codegen/.coregen/src/cuur_codegen/cli/: main.py
.codegen/.coregen/src/cuur_codegen/extractors/: __init__.py  openapi_typescript_extractor.py  openapi_zod_client_extractor.py
.codegen/.coregen/src/cuur_codegen/generators/: __init__.py
.codegen/.coregen/src/cuur_codegen/pipeline/: __init__.py  pipeline.py  stages.py
.codegen/.coregen/src/cuur_codegen/utils/: __init__.py  file.py  generator_setup.py  naming.py  (+6 more)
(+3524 files in other folders)
